fix(ui): add word-wrap to post-title to prevent from overflow

--- a/src/resources/sass/front/_post-content.scss
+++ b/src/resources/sass/front/_post-content.scss
@@ -8,6 +8,7 @@
   .post-title {
     font-weight: bold;
     font-size: 1.8rem;
+    word-wrap: break-word;
   }
 
   .post-datetime {
